{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 251,
  "lineage": "e84ace44-1514-d643-8b5e-43f24fa7eeca",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/zones/us-central1-a/instanceGroups/tf-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-05-26T08:21:06.897-07:00",
            "enable_cdn": false,
            "fingerprint": "JfyKAjbKcZI=",
            "health_checks": [
              "projects/boxwood-yen-347112/global/httpHealthChecks/tf-healthcheck"
            ],
            "id": "projects/boxwood-yen-347112/global/backendServices/tf-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "tf-backend-service",
            "port_name": "http",
            "project": "boxwood-yen-347112",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/global/backendServices/tf-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_compute_image.debian_image",
            "google_compute_http_health_check.healthcheck",
            "google_compute_instance.vm1",
            "google_compute_instance.vm2",
            "google_compute_instance.vm3",
            "google_compute_instance_group.instance_group",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-05-26T08:20:41.714-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/boxwood-yen-347112/global/firewalls/tf-fw-rules",
            "log_config": [],
            "name": "tf-fw-rules",
            "network": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/global/networks/terraform-network",
            "priority": 1000,
            "project": "boxwood-yen-347112",
            "self_link": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/global/firewalls/tf-fw-rules",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.241.50.220",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-05-26T08:20:09.156-07:00",
            "id": "projects/boxwood-yen-347112/global/addresses/tf-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "tf-static-ip",
            "prefix_length": 0,
            "project": "boxwood-yen-347112",
            "self_link": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/global/addresses/tf-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "forward_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/boxwood-yen-347112/global/forwardingRules/fw-rule-port-80",
            "ip_address": "35.241.50.220",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fw-rule-port-80",
            "port_range": "80",
            "project": "boxwood-yen-347112",
            "self_link": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/global/forwardingRules/fw-rule-port-80",
            "target": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/global/targetHttpProxies/http-proxy"
          },
          "dependencies": [
            "data.google_compute_image.debian_image",
            "google_compute_backend_service.backend_service",
            "google_compute_global_address.static_ip",
            "google_compute_http_health_check.healthcheck",
            "google_compute_instance.vm1",
            "google_compute_instance.vm2",
            "google_compute_instance.vm3",
            "google_compute_instance_group.instance_group",
            "google_compute_network.vpc_network",
            "google_compute_target_http_proxy.http_proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20220519",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/zones/us-central1-a/disks/tf-vm1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/boxwood-yen-347112/zones/us-central1-a/instances/tf-vm1",
            "instance_id": "6529783132821005350",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "geniy9494:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDEcDbLn6Orrd15YsivBdKaWTy3eCGGzNTmQ/kgU7MFeHId//+8iHC88665PRfHahEc5yO+LsURvQdtDkBWCICF8Bc5QSRCr5EkIpc9heY7TJK3EkYKKQ1Iab9fU/QnwIfqtUZBnXpmrxG3jSQMv2R5UYYauf6oRuJ7cor2t0NuRpt693QYjAgo6dfH+z6i+FXeCbFc1Y0LIWgouYoVV0l0bn5ExF7wKBVfmaOREmK03HRLks95dGy9phB5/0XwVokl6JIqF6OozcSAd2zaAdJVxETzQZujT1p3YKePx/XCS+hdQRRoaTFJNbNyDGDXWRz1xVWLSs50yXzsTwcoMM41 geniy9494"
            },
            "metadata_fingerprint": "YHGaRL-AcdE=",
            "name": "tf-vm1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.135.46.163",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/global/networks/terraform-network",
                "network_ip": "10.128.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "boxwood-yen-347112"
              }
            ],
            "project": "boxwood-yen-347112",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/zones/us-central1-a/instances/tf-vm1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_image.debian_image",
            "google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20220519",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/zones/us-central1-a/disks/tf-vm2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/boxwood-yen-347112/zones/us-central1-a/instances/tf-vm2",
            "instance_id": "7673538318224729126",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "geniy9494:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDEcDbLn6Orrd15YsivBdKaWTy3eCGGzNTmQ/kgU7MFeHId//+8iHC88665PRfHahEc5yO+LsURvQdtDkBWCICF8Bc5QSRCr5EkIpc9heY7TJK3EkYKKQ1Iab9fU/QnwIfqtUZBnXpmrxG3jSQMv2R5UYYauf6oRuJ7cor2t0NuRpt693QYjAgo6dfH+z6i+FXeCbFc1Y0LIWgouYoVV0l0bn5ExF7wKBVfmaOREmK03HRLks95dGy9phB5/0XwVokl6JIqF6OozcSAd2zaAdJVxETzQZujT1p3YKePx/XCS+hdQRRoaTFJNbNyDGDXWRz1xVWLSs50yXzsTwcoMM41 geniy9494"
            },
            "metadata_fingerprint": "YHGaRL-AcdE=",
            "name": "tf-vm2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.232.172.214",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/global/networks/terraform-network",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "boxwood-yen-347112"
              }
            ],
            "project": "boxwood-yen-347112",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/zones/us-central1-a/instances/tf-vm2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_image.debian_image",
            "google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20220519",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/zones/us-central1-a/disks/tf-vm3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/boxwood-yen-347112/zones/us-central1-a/instances/tf-vm3",
            "instance_id": "44024491682178086",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "geniy9494:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDEcDbLn6Orrd15YsivBdKaWTy3eCGGzNTmQ/kgU7MFeHId//+8iHC88665PRfHahEc5yO+LsURvQdtDkBWCICF8Bc5QSRCr5EkIpc9heY7TJK3EkYKKQ1Iab9fU/QnwIfqtUZBnXpmrxG3jSQMv2R5UYYauf6oRuJ7cor2t0NuRpt693QYjAgo6dfH+z6i+FXeCbFc1Y0LIWgouYoVV0l0bn5ExF7wKBVfmaOREmK03HRLks95dGy9phB5/0XwVokl6JIqF6OozcSAd2zaAdJVxETzQZujT1p3YKePx/XCS+hdQRRoaTFJNbNyDGDXWRz1xVWLSs50yXzsTwcoMM41 geniy9494"
            },
            "metadata_fingerprint": "YHGaRL-AcdE=",
            "name": "tf-vm3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.222.208.78",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/global/networks/terraform-network",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "boxwood-yen-347112"
              }
            ],
            "project": "boxwood-yen-347112",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/zones/us-central1-a/instances/tf-vm3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_image.debian_image",
            "google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/boxwood-yen-347112/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "project": "boxwood-yen-347112",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/global/networks/terraform-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-05-26T08:21:40.265-07:00",
            "id": "projects/boxwood-yen-347112/global/targetHttpProxies/http-proxy",
            "name": "http-proxy",
            "project": "boxwood-yen-347112",
            "proxy_bind": false,
            "proxy_id": 3360919952178685419,
            "self_link": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/global/urlMaps/url-map"
          },
          "dependencies": [
            "data.google_compute_image.debian_image",
            "google_compute_backend_service.backend_service",
            "google_compute_http_health_check.healthcheck",
            "google_compute_instance.vm1",
            "google_compute_instance.vm2",
            "google_compute_instance.vm3",
            "google_compute_instance_group.instance_group",
            "google_compute_network.vpc_network",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-05-26T08:21:28.662-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/global/backendServices/tf-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "LGLHkioKAjw=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/boxwood-yen-347112/global/urlMaps/url-map",
            "map_id": 7947022190453597207,
            "name": "url-map",
            "path_matcher": [],
            "project": "boxwood-yen-347112",
            "self_link": "https://www.googleapis.com/compute/v1/projects/boxwood-yen-347112/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_image.debian_image",
            "google_compute_backend_service.backend_service",
            "google_compute_http_health_check.healthcheck",
            "google_compute_instance.vm1",
            "google_compute_instance.vm2",
            "google_compute_instance.vm3",
            "google_compute_instance_group.instance_group",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}